samples/_failures_safe/1761187559_5aef57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbf44c2a.c: In function ‘main’:
./samples/SAFE/__tmp_fbf44c2a.c:139:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  139 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_fbf44c2a.c:139:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fbf44c2a.c:139:9: error: expected ‘;’ at end of input
  139 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_fbf44c2a.c:139:5: error: expected declaration or statement at end of input
  139 |     size
      |     ^~~~
